# hackclub-teme-ui-mkdocs

./: .gitignore  .wakatime-project  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  wak.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml  docs-feedback.yml
.github/workflows/: docs-deploy.yml
docs/: debug-ops.md  index.md
docs/user-guide/: configuration.md
hackclub/: base.html  mkdocs_theme.yml
hackclub/css/: font.css
hackclub/extensions/: emoji.py
hackclub/templates/: 404.html  base.html  mkdocs_theme.yml
hackclub/templates/css/: base.css  font.css  meta.css  theme.css
hackclub/templates/partials/: footer.html  header.html
