[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-hackclub-theme"
version = "0.1"
description = "Hack Club Theme for MkDocs"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Andrei Jiroh Halili", email = "ajhalili2006@crew.recaptime.dev"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs >= 1.5",
]

[project.urls]
Source = "https://github.com/lorebooks-wiki/hackclub-theme-mkdocs"

[project.entry-points."mkdocs.themes"]
basictheme = "hackclub"

[tool.hatch.build]
include = ["/hackclub"]

[tool.poetry]
name = "mkdocs-hackclub"
version = "0.1"
description = "Hack Club Theme for MkDocs"
authors = [
    "Andrei Jiroh Halili"
]
dependencies = {python = ">= 3.10",mkdocs = ">= 1.5"}
package-mode = false
