[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-hackclub"
version = "0.1"
description = "Hack Club Theme for MkDocs"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Andrei Jiroh Halili", email = "ajhalili2006@crew.recaptime.dev"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs >= 1.5",
    "pymdown-extensions >= 10.12",
    "pygments >= 2.18.0",
    "jinja2 >= 3.1.4",
    "markdown >= 3.7"
]

[project.urls]
Source = "https://github.com/lorebooks-wiki/hackclub-theme-mkdocs"

[project.entry-points."mkdocs.themes"]
hackclub = "hackclub.templates"

[tool.hatch.build]
include = ["/hackclub"]

[tool.poetry]
name = "mkdocs-hackclub"
version = "0.1"
description = "Hack Club Theme for MkDocs"
authors = [
    "Andrei Jiroh Halili"
]
dependencies = {python = ">= 3.10",mkdocs = ">= 1.5",pymdown-extensions = "^10.12",pygments = "^2.18.0",jinja2 = "^3.1.4",markdown = "^3.7"}
# workaround: https://github.com/python-poetry/poetry/issues/8662#issuecomment-1905050446
packages = [
    {include = "hackclub"}
]
license = "MIT"